fix wrap

--- a/src/features/sense/ui/SenseViewer/Messages/Message/Message.module.scss
+++ b/src/features/sense/ui/SenseViewer/Messages/Message/Message.module.scss
@@ -87,6 +87,7 @@
 
 .content {
   grid-area: content;
+  word-break: break-word;
 }
 
 .amount {
